add skynetsw redirect

--- a/packages/skynetsw/skynetsw.html
+++ b/packages/skynetsw/skynetsw.html
@@ -2,7 +2,7 @@
   <head>
     <script role="text/javascript">
       setTimeout(() => {
-          document.cookie = "skynetsw=1; max-age=31536000; Secure";
+          document.cookie = "skynetsw=1; max-age=31536000; SameSite=None; Secure";
           window.location.reload();
       }, 5000);
     </script>
